--- a/OpenPyxl.ipynb
+++ b/OpenPyxl.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### .rows, .columns 속성"
+    "### .rows, .columns 속성"
    ]
   },
   {
@@ -476,7 +476,258 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 엑셀 함수 쓰기 (max_row, max_column)"
+    "### 엑셀 함수 쓰기 (max_row, max_column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wb = op.load_workbook(\"./openpyxl_test.xlsx\")\n",
+    "ws = wb.active\n",
+    "\n",
+    "ws[\"E11\"].value = \"=SUM(C:C)\"\n",
+    "\n",
+    "wb.save(\"./result.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "최대 행 값: 11\n",
+      "최대 열 값: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "wb = op.load_workbook(\"./openpyxl_test.xlsx\")\n",
+    "ws = wb.active\n",
+    "\n",
+    "col_max = ws.max_column\n",
+    "row_max = ws.max_row\n",
+    "\n",
+    "print(f\"최대 행 값: {row_max}\\n최대 열 값: {col_max}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for row in range(2, row_max+1):\n",
+    "    ws[\"E\"+str(row)].value = \"=C\"+str(row)+\"*\"+\"D\"+str(row)\n",
+    "\n",
+    "wb.save(\"./result.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['총 가격(단가*인원)', '=C2*D2', '=C3*D3', '=C4*D4', '=C5*D5', '=C6*D6', '=C7*D7', '=C8*D8', '=C9*D9', '=C10*D10', '=C11*D11']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 함수 결과를 다시 읽어보기\n",
+    "wb = op.load_workbook(\"./result.xlsx\")\n",
+    "ws = wb.active\n",
+    "\n",
+    "data = []\n",
+    "for row in ws.rows:\n",
+    "    data.append(row[4].value)\n",
+    "\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- data_only=True : 수식이 계산된 값을 읽어옴\n",
+    "- read_only=True : 엑셀을 수정하지 않고 데이터만 읽어올 경우"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['총 가격(단가*인원)', 10000, 30000, 39000, 100000, 15000, 15000, 30000, 39000, 100000, 20000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "wb = op.load_workbook(\"./result.xlsx\", data_only=True)\n",
+    "ws = wb.active\n",
+    "\n",
+    "data = []\n",
+    "for row in ws.rows:\n",
+    "    data.append(row[-1].value)\n",
+    "\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 엑셀 서식 지정하기\n",
+    "#### 1. Font"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Workbook.close of <openpyxl.workbook.workbook.Workbook object at 0x000002C173FCB588>>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from openpyxl.styles.fonts import Font\n",
+    "\n",
+    "wb = op.Workbook()\n",
+    "ws = wb.active\n",
+    "\n",
+    "# 직접 폰트 설정\n",
+    "ws[\"A1\"].value = \"Font test1\"\n",
+    "ws[\"A1\"].font = Font(size=20, italic=True, bold=True)\n",
+    "# format을 정해 놓고 font 설정하기\n",
+    "ws[\"A2\"].value = \"Font test2\"\n",
+    "font_format = Font(size=12, name=\"굴림\", color=\"FF000000\")\n",
+    "ws[\"A2\"].font = font_format\n",
+    "\n",
+    "wb.save(\"./test_result.xlsx\")\n",
+    "wb.close"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Border, Side\n",
+    "엑셀의 셀 테두리를 설정  \n",
+    "- Border: 선택 Cell에 상하좌우 중 어떤 부분?\n",
+    "- Side: 각 테두리에 어떤 테두리 형식을 적용?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Workbook.close of <openpyxl.workbook.workbook.Workbook object at 0x000002C173807148>>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from openpyxl.styles import Border, Side\n",
+    "from openpyxl.styles.colors import Color\n",
+    "\n",
+    "wb = op.Workbook()\n",
+    "ws = wb.active\n",
+    "\n",
+    "ws[\"C3\"].value = \"1개 Cell\"\n",
+    "\n",
+    "ws[\"C3\"].border = Border(top=Side(border_style=\"thin\", color=\"135EB9\"))\n",
+    "ws[\"C3\"].border = Border(bottom=Side(border_style=\"double\"))\n",
+    "\n",
+    "wb.save(\"./test_result.xlsx\")\n",
+    "wb.close"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. 정렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl.styles import Alignment\n",
+    "\n",
+    "wb = op.Workbook()\n",
+    "ws = wb.active\n",
+    "\n",
+    "ws[\"C2\"].value = \"Alignment Test1\"\n",
+    "ws[\"C4\"].value = \"Alignment Test2\"\n",
+    "\n",
+    "# 셀 너비, 높이 설정\n",
+    "ws.row_dimensions[2].height = 50 # 2행의 높이\n",
+    "ws.row_dimensions[4].height = 50 # 4행의 높이\n",
+    "ws.column_dimensions[\"C\"].width = 50 # C열의 너비\n",
+    "\n",
+    "ws[\"C2\"].alignment = Alignment(horizontal=\"left\", vertical=\"center\")\n",
+    "\n",
+    "format= Alignment(horizontal=\"center\", vertical=\"center\")\n",
+    "ws[\"C4\"].alignment = format\n",
+    "\n",
+    "wb.save(\"./test_result.xlsx\")\n",
+    "wb.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- horizontal : center, left, right\n",
+    "- vertical : top, bottom, center\n",
+    "\n",
+    "#### 4. 채우기 (PatternFill)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl.styles import PatternFill\n",
+    "\n",
+    "wb = op.Workbook()\n",
+    "ws = wb.active\n",
+    "\n",
+    "ws[\"C5\"].fill = PatternFill(fill_type=\"solid\", fgColor=\"00FF00\")\n",
+    "ws[\"C3\"].fill = PatternFill()"
    ]
   }
  ],
