--- a/OpenPyxl.ipynb
+++ b/OpenPyxl.ipynb
@@ -717,9 +717,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Workbook.close of <openpyxl.workbook.workbook.Workbook object at 0x000002C17420E608>>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from openpyxl.styles import PatternFill\n",
     "\n",
@@ -727,7 +738,310 @@
     "ws = wb.active\n",
     "\n",
     "ws[\"C5\"].fill = PatternFill(fill_type=\"solid\", fgColor=\"00FF00\")\n",
-    "ws[\"C3\"].fill = PatternFill()"
+    "ws[\"C3\"].fill = PatternFill(fill_type=\"solid\", fgColor=\"000000\")\n",
+    "\n",
+    "wb.save(\"./test_result.xlsx\")\n",
+    "wb.close"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. 셀 숨김, 보호"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Workbook.close of <openpyxl.workbook.workbook.Workbook object at 0x000002C1741146C8>>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from openpyxl.styles import Protection\n",
+    "\n",
+    "wb = op.Workbook()\n",
+    "ws = wb.active\n",
+    "\n",
+    "ws[\"C3\"].value = \"Protection Test1 : locked\"\n",
+    "ws[\"C5\"].value = \"Protection Test2 : hidden\"\n",
+    "\n",
+    "ws[\"C3\"].protection = Protection(locked=True, hidden=True)\n",
+    "ws[\"C5\"].protection = Protection(locked=False, hidden=False)\n",
+    "\n",
+    "wb.save(\"./test_result.xlsx\")\n",
+    "wb.close"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 조건부 서식\n",
+    "어떤 특정 조건에 따라 셀 서식을 달리 적용하도록 할 수 있는 기능  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Workbook.close of <openpyxl.workbook.workbook.Workbook object at 0x000002C174345B88>>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wb = op.load_workbook(\"./cond.xlsx\", data_only=True)\n",
+    "ws = wb.active\n",
+    "\n",
+    "def passfail():\n",
+    "    max_row = ws.max_row\n",
+    "    for row_idx in range(2, max_row+1):\n",
+    "        avg = ws.cell(row=row_idx, column=5).value\n",
+    "        if avg>=70:\n",
+    "            ws.cell(row=row_idx, column=6).value = \"합격\"\n",
+    "        else:\n",
+    "            ws.cell(row=row_idx, column=6).value = \"불합격\"\n",
+    "\n",
+    "passfail()\n",
+    "wb.save(\"./cond.xlsx\")\n",
+    "wb.close\n",
+    "\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     passfail()\n",
+    "#     wb.save(~~~)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 각 조건에  따른 셀서식 `format`을 변수로 설정\n",
+    "- `if ~ else` 등 조건물을 사용해 조건에 따른 셀서식 `format` 적용하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Workbook.close of <openpyxl.workbook.workbook.Workbook object at 0x000002C174345B88>>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def conditionFormat():\n",
+    "    pass_format = Font(size=12, name=\"굴림\", color=\"000000FF\")\n",
+    "    fail_format = Font(size=12, name=\"굴림\", color=\"00FF0000\")\n",
+    "    max_row = ws.max_row\n",
+    "\n",
+    "    for row_idx in range(2, max_row+1):\n",
+    "        result_str = ws.cell(row=row_idx, column=6).value\n",
+    "        if result_str==\"합격\":\n",
+    "            ws.cell(row=row_idx, column=6).font = pass_format\n",
+    "        else:\n",
+    "            ws.cell(row=row_idx, column=6).font = fail_format\n",
+    "\n",
+    "conditionFormat()\n",
+    "wb.save(\"./cond.xlsx\")\n",
+    "wb.close"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WorkSheet 조작하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sheet']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Workbook의 시트명을 출력\n",
+    "wb = op.Workbook()\n",
+    "\n",
+    "print(wb.sheetnames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sheet', 'practice']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 시트 생성\n",
+    "wb = op.Workbook()\n",
+    "ws = wb.create_sheet(\"practice\")\n",
+    "print(wb.sheetnames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1st', 'Sheet', 'practice']\n",
+      "['1st', 'Sheet', 'post2', 'practice']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ws =  wb.create_sheet(\"1st\", 0)\n",
+    "print(wb.sheetnames)\n",
+    "ws = wb.create_sheet(\"post2\", -1)\n",
+    "print(wb.sheetnames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original:  ['1st', 'Sheet', 'post2', 'practice']\n",
+      "Remove:  ['Sheet', 'post2', 'practice']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 시트 삭제\n",
+    "print(\"original: \", wb.sheetnames)\n",
+    "\n",
+    "ws = wb[\"1st\"]\n",
+    "wb.remove(ws)\n",
+    "\n",
+    "print(\"Remove: \", wb.sheetnames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['시트', '시트2', 'practice']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 시트 이름 변경\n",
+    "ws = wb[\"Sheet\"]\n",
+    "ws.title = \"시트\"\n",
+    "\n",
+    "ws = wb[\"post2\"]\n",
+    "ws.title = \"시트2\"\n",
+    "\n",
+    "print(wb.sheetnames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original ['시트', '시트2', 'practice']\n",
+      "move:  ['시트', 'practice', '시트2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 현재 위치(기준)에서 상대적인 위치 값(오프셋)을 입력해 시트 이동\n",
+    "print(\"original\", wb.sheetnames)\n",
+    "\n",
+    "ws = wb[\"시트2\"]\n",
+    "wb.move_sheet(ws, 1)\n",
+    "\n",
+    "print(\"move: \", wb.sheetnames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Worksheet \"practice Copy\">\n",
+      "['시트', 'practice', '시트2', 'practice Copy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 시트 복사\n",
+    "sht = wb[\"practice\"]\n",
+    "ws_copy  = wb.copy_worksheet(sht)\n",
+    "\n",
+    "print(ws_copy)\n",
+    "print(wb.sheetnames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 시트 탭 색상 변경\n",
+    "ws.sheet_properties.tabColor = \"00FFFF\""
    ]
   }
  ],
