--- a/win32com.ipynb
+++ b/win32com.ipynb
@@ -9,8 +9,13 @@
     "MS에서 제공하는 윈도우 프로그램을 파이썬으로 제어할 수 있도록 만든 API  \n",
     "\n",
     "#### Openpyxl과의 차이점\n",
-    "`Win32com`은 엑셀 실행 상태에서 제어가 가능  \n",
-    "-> `openpyxl`은 엑셀 파일 실행 중 접근이 불가능"
+    "1. `Win32com`은 엑셀 실행 상태에서 제어가 가능  \n",
+    "    -> `openpyxl`은 엑셀 파일 실행 중 접근이 불가능\n",
+    "\n",
+    "2. 엑셀 기능적인 측면에서 접근 가능  \n",
+    "    -> 엑셀 프로그램에서 사용하는 기능을 함수 하나로 대체하여 사용 가능\n",
+    "\n",
+    "### Cell 데이터 읽기/쓰기"
    ]
   }
  ],
