--- a/win32com.ipynb
+++ b/win32com.ipynb
@@ -1136,6 +1136,154 @@
     "\n",
     "ws.ExportAsFixedFormat(Type=0, Filename=path+\"/test.pdf\", From=1, To=1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 전자메일(Outlook) 다루기\n",
+    "메일을 다수의 사람들에게 자동 발송하거나, 첨부 파일들을 한번에 다운 받거나 메일의 내용들을 엑셀 파일에 한번에 취합\n",
+    "\n",
+    "### 메일 보내기 (송신)\n",
+    "Outlook App 객체 -> 새 매일 보내기 창 -> 수신인, 참조, 제목, 내용 -> 메일 보내기  \n",
+    "`outlook -> .CreateItem(0) -> To. CC, Subject, HTMLBody 등 -> Send()`\n",
+    "\n",
+    "#### Outlook Application에 대한 객체 생성"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outlook = win32com.client.Dispatch(\"Outlook.Application\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 메일을 보내기 위한 객체 생성\n",
+    "send_mail = outlook.CreateItem(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 메일 보내기에 필요한 정보 입력\n",
+    "send_mail.To = \"수신인 메일\"\n",
+    "send_mail.CC = \"참조 메일\"\n",
+    "send_mail.Subject = \"메일 제목\"\n",
+    "send_mail.HTMLBody = \"내용\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 메일 보내기\n",
+    "send_mail.Send()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 메일 받기 (수신)\n",
+    "Outlook App 객체 -> 받은 편지함 객체 -> 메일 목록 객체 -> 각 메일에 접근 가능  \n",
+    "`outlook -> inboxfolder -> messages -> 메일 제목, 내용, 수신인, 첨부파일 정보 등`\n",
+    "\n",
+    "#### Outlook Application에 대한 객체 생성"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outlook = win32com.client.Dispatch(\"Oulook.Application\").GetNamespace(\"MAPI\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`MAPI`는 메일을 수신할 때 필요한 프로토콜"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 메일 수신함 설정하기\n",
+    "inboxfolder = outlook.GetDefaultFolder(6)\n",
+    "# 메시지 받아오기\n",
+    "messages = inboxfolder.Items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 특정 메일함에 접근하는 경우\n",
+    "inboxfolder = outlook.GetDefaultFolder(6).Folders[\"메일함\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 받은 메일 내용 출력\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for mail in messages:\n",
+    "    mail.SenderName # 발신인\n",
+    "    mail.To # 수신인\n",
+    "    mail.Subject # 제목\n",
+    "    mail.ReceivedTime # 받은 시간\n",
+    "    mail.Body # 내용"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 첨부파일 다운 받기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for mail in messages:\n",
+    "    attachments = mail.Attachments # 첨부파일 객체 설정\n",
+    "    r = attachments.count # 첨부파일 개수\n",
+    "    # 첨부파일 모두 저장\n",
+    "    for i in range(1, r+1):\n",
+    "        attachment = attachments.Item(i)\n",
+    "        attachment.SaveASFile(\"경로\") # 파일병 설정"
+   ]
   }
  ],
  "metadata": {
